# firescope

./: .env.example  .gitignore  README.md  package.json  package.json.startkit  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
docker/: Dockerfile  docker-compose.yml  firebase.json  firestore.rules  seed.sh
docker/seed/: .gitkeep
src/: App.tsx  main.tsx  monaco.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/adapters/: event_sink.rs  log_layer.rs  mod.rs  profile_repo.rs  query_history_repo.rs
src-tauri/src/auth/: emulator.rs  id_token.rs  mod.rs  service_account.rs
src-tauri/src/commands/: listener.rs  mod.rs  profile.rs  query.rs  session.rs  tabs.rs
src-tauri/src/firestore/: connection.rs  cursor.rs  decode.rs  index_hint.rs  listener.rs  mod.rs  result_sink.rs  streaming.rs
src-tauri/src/profile/: mod.rs  model.rs  repository.rs  store.rs  validation.rs  vault.rs
src-tauri/src/query/: dsl.rs  history.rs  mod.rs  post_filter.rs  stats.rs  translate.rs  validate.rs
src/components/: EmptyState.tsx  ThemeToggle.tsx
src/ipc/: index.ts  listener.ts  profile.ts  query.ts  session.ts  tabs.ts
src/lib/: errorMessages.test.ts  errorMessages.ts  hotkeys.test.ts  hotkeys.ts  json.test.ts  json.ts  queryDraft.test.ts  queryDraft.ts  ringBuffer.test.ts  ringBuffer.ts  stats.test.ts  stats.ts  tree.test.ts  tree.ts  useElementSize.ts
src/stores/: historyStore.ts  logStore.ts  profileStore.ts  queryStore.test.ts  queryStore.ts  resultStore.fetchMore.test.ts  resultStore.listener.test.ts  (+10 more)
(+30 files in other folders)
